Adds a "Test" menu that allows generating error/failure states in stations.
